new images in placeholder

--- a/artists.html
+++ b/artists.html
@@ -44,7 +44,7 @@
             <div class="artists-grid">
                 <article class="artist-card" data-genre="electronic synthwave">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+1" alt="Luna Echo - Electronic artist">
+                        <img src="https://cdn.pixabay.com/photo/2022/10/07/17/31/potrait-7505583_960_720.jpg" alt="Luna Echo - Electronic artist">
                     </div>
                     <h3>Luna Echo</h3>
                     <p class="artist-genre">Electronic • Synthwave</p>
@@ -54,7 +54,7 @@
 
                 <article class="artist-card" data-genre="hip hop rap">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+2" alt="The Groove Kings - Hip Hop group">
+                        <img src="https://images.pexels.com/photos/5778410/pexels-photo-5778410.jpeg?_gl=1*khlr4b*_ga*MjAyNjg0OTc5Ni4xNzY1Njg4MTM0*_ga_8JE65Q40S6*czE3NjU2ODgxMzQkbzEkZzEkdDE3NjU2ODgxNDMkajUxJGwwJGgw" alt="The Groove Kings - Hip Hop group">
                     </div>
                     <h3>The Groove Kings</h3>
                     <p class="artist-genre">Hip Hop • Rap</p>
@@ -64,7 +64,7 @@
 
                 <article class="artist-card" data-genre="jazz soul">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+3" alt="Serene Soul - Jazz artist">
+                        <img src="https://images.pexels.com/photos/8422755/pexels-photo-8422755.jpeg" alt="Serene Soul - Jazz artist">
                     </div>
                     <h3>Serene Soul</h3>
                     <p class="artist-genre">Jazz • Soul</p>
@@ -74,7 +74,7 @@
 
                 <article class="artist-card" data-genre="rock alternative">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+4" alt="Rock Revival - Rock band">
+                        <img src="https://images.pexels.com/photos/7119382/pexels-photo-7119382.jpeg?_gl=1*1odwzpl*_ga*MjAyNjg0OTc5Ni4xNzY1Njg4MTM0*_ga_8JE65Q40S6*czE3NjU2ODgxMzQkbzEkZzEkdDE3NjU2ODgxOTUkajU5JGwwJGgw" alt="Rock Revival - Rock band">
                     </div>
                     <h3>Rock Revival</h3>
                     <p class="artist-genre">Rock • Alternative</p>
@@ -84,7 +84,7 @@
 
                 <article class="artist-card" data-genre="indie alternative rock">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+5" alt="Indie Tide - Indie rock artist">
+                        <img src="https://images.pexels.com/photos/18978811/pexels-photo-18978811.png" alt="Indie Tide - Indie rock artist">
                     </div>
                     <h3>Indie Tide</h3>
                     <p class="artist-genre">Indie • Alternative Rock</p>
@@ -94,32 +94,32 @@
 
                 <article class="artist-card" data-genre="country folk">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+6" alt="Country Stories - Country artist">
+                        <img src="https://images.pexels.com/photos/19480471/pexels-photo-19480471.jpeg" alt="Rabina Manali - Country artist">
                     </div>
-                    <h3>Country Stories</h3>
+                    <h3>Rabina Manali</h3>
                     <p class="artist-genre">Country • Folk</p>
                     <p class="artist-followers">2.2M followers</p>
-                    <button class="follow-btn" aria-label="Follow Country Stories">Follow</button>
+                    <button class="follow-btn" aria-label="Follow Rabina Manali">Follow</button>
                 </article>
 
                 <article class="artist-card" data-genre="pop">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+7" alt="Pop Sensation - Pop star">
+                        <img src="https://images.pexels.com/photos/13472602/pexels-photo-13472602.jpeg" alt="Jenny Liu - Pop star">
                     </div>
-                    <h3>Pop Sensation</h3>
+                    <h3>Jenny Liu</h3>
                     <p class="artist-genre">Pop • Mainstream</p>
                     <p class="artist-followers">5.7M followers</p>
-                    <button class="follow-btn" aria-label="Follow Pop Sensation">Follow</button>
+                    <button class="follow-btn" aria-label="Follow Jenny Liu">Follow</button>
                 </article>
 
                 <article class="artist-card" data-genre="classical symphony">
                     <div class="artist-image">
-                        <img src="https://via.placeholder.com/200x200?text=Artist+8" alt="Classical Virtuoso - Classical musician">
+                        <img src="https://images.pexels.com/photos/18718908/pexels-photo-18718908.jpeg" alt="Arjit Thakur - Classical musician">
                     </div>
-                    <h3>Classical Virtuoso</h3>
+                    <h3>Arjit Thakur</h3>
                     <p class="artist-genre">Classical • Symphony</p>
                     <p class="artist-followers">880K followers</p>
-                    <button class="follow-btn" aria-label="Follow Classical Virtuoso">Follow</button>
+                    <button class="follow-btn" aria-label="Follow Arjit Thakur">Follow</button>
                 </article>
             </div>
         </section>
