fixed images links

--- a/index.html
+++ b/index.html
@@ -79,25 +79,25 @@
             <h2 id="trending-heading">Trending Now</h2>
             <div class="trending-grid">
                 <div class="trending-card">
-                    <img src="https://via.placeholder.com/200x200?text=Neon+Nights" alt="Neon Nights album cover">
+                    <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?q=80&w=400&auto=format&fit=crop" alt="Neon Nights album cover">
                     <h3>Neon Nights</h3>
                     <p>Synthwave Collective</p>
                     <button class="play-btn" aria-label="Play Neon Nights" aria-pressed="false" data-audio="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3">▶</button>
                 </div>
                 <div class="trending-card">
-                    <img src="https://via.placeholder.com/200x200?text=Urban+Pulse" alt="Urban Pulse album cover">
+                    <img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?q=80&w=400&auto=format&fit=crop" alt="Urban Pulse album cover">
                     <h3>Urban Pulse</h3>
                     <p>Hip Hop Masters</p>
                     <button class="play-btn" aria-label="Play Urban Pulse" aria-pressed="false" data-audio="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3">▶</button>
                 </div>
                 <div class="trending-card">
-                    <img src="https://via.placeholder.com/200x200?text=Chilled+Vibes" alt="Chilled Vibes album cover">
+                    <img src="https://images.unsplash.com/photo-1503481766315-7a586b20f66d?q=80&w=400&auto=format&fit=crop" alt="Chilled Vibes album cover">
                     <h3>Chilled Vibes</h3>
                     <p>Lofi Dreams</p>
                     <button class="play-btn" aria-label="Play Chilled Vibes" aria-pressed="false" data-audio="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3">▶</button>
                 </div>
                 <div class="trending-card">
-                    <img src="https://via.placeholder.com/200x200?text=Rock+Legends" alt="Rock Legends album cover">
+                    <img src="https://images.unsplash.com/photo-1498038432885-c6f3f1b912ee?q=80&w=400&auto=format&fit=crop" alt="Rock Legends album cover">
                     <h3>Rock Legends</h3>
                     <p>Classic Rock Band</p>
                     <button class="play-btn" aria-label="Play Rock Legends" aria-pressed="false" data-audio="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-4.mp3">▶</button>
